# Packer

./: .gitignore  AUTHORS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.md  CreateDocs.py  GenerateDocs.py  LICENSE  LICENSE.md  LOGO_LICENSE.md  README.md  SECURITY.md  generate_docs.py  generate_doxygen_comments.py  main.cpp  packer.cpp  packer.h  packer_config.cpp  packer_config.h  version.py
.github/workflows/: CreateDocs.yml  GenerateDocs.yml  build.yml  ci.yml
Compiler/: Packer.sln
Compiler/Console/: Console.vcxproj  Console.vcxproj.filters
Compiler/Tests/: Tests.vcxproj  Tests.vcxproj.filters
Documentation/: Classes.xml  Color.xml  ConfigFile.xml  Console.xml  Crypto.xml  CryptoKey.xml  Doxyfile_Console  Doxyfile_Packer  Doxyfile_Tests  Error.xml  Extension.xml  GenerateDocs.py  Log.xml  LogFile.xml  Packer.xml  Platform.xml  Variant.xml
Documentation/html/: _application_8h.html  _application_8h_source.html  _config_file_8h_source.html  _console_2_defaults_8h.html  _console_2_defaults_8h_source.html  _console_2_typedefs_8h_source.html  _console_8h_source.html  _crypto_8h.html  _crypto_8h_source.html  _defaults_8h.html  _defaults_8h_source.html  _error_8h.html  _error_8h_source.html  _file_access_8h_source.html  _log_8h.html  _log_8h_source.html  _log_file_8h.html  _log_file_8h_source.html  _packer_2_defaults_8h.html  _packer_2_defaults_8h_source.html  _packer_2_typedefs_8h.html  _packer_2_typedefs_8h_source.html  _packer_8h_source.html  _typedefs_8h.html  _typedefs_8h_source.html  _variant_8h.html  _variant_8h_source.html  _version_8h.html  _version_8h_source.html  class_application-members.html  class_application.html  class_config_file-members.html  class_config_file.html  class_console.html  class_crypto.html  class_crypto_key-members.html  class_crypto_key.html  class_log-members.html  class_log.html  class_log_file-members.html  (+26 more)
Documentation/latex/: _application_8h.tex  _application_8h_source.tex  _config_file_8h_source.tex  _console_2_defaults_8h.tex  _console_2_defaults_8h_source.tex  _console_2_typedefs_8h_source.tex  _console_8h_source.tex  _crypto_8h.tex  _crypto_8h_source.tex  _defaults_8h.tex  _error_8h.tex  _error_8h_source.tex  _file_access_8h_source.tex  _log_8h.tex  _log_8h_source.tex  _log_file_8h.tex  _log_file_8h_source.tex  _packer_2_defaults_8h.tex  _packer_2_defaults_8h_source.tex  _packer_2_typedefs_8h.tex  _packer_2_typedefs_8h_source.tex  _packer_8h_source.tex  _variant_8h.tex  _variant_8h_source.tex  _version_8h.tex  _version_8h_source.tex  annotated.tex  class_application.tex  class_config_file.tex  class_console.tex  class_crypto.tex  class_crypto_key.tex  class_log.tex  class_log_file.tex  class_packer.tex  class_variant.tex  files.tex  hierarchy.tex  namespace_file_access.tex  namespaces.tex  (+1 more)
Packer/html/: _config_file_8h.html  _config_file_8h_source.html  _console_8h.html  _console_8h_source.html  _crypto_8h.html  _crypto_8h_source.html  _defaults_8h.html  _defaults_8h_source.html  _error_8h.html  _error_8h_source.html  _log_8h.html  _log_8h_source.html  _log_file_8h.html  _log_file_8h_source.html  _packer_8h.html  _packer_8h_source.html  _typedefs_8h.html  _typedefs_8h_source.html  _variant_8h.html  _variant_8h_source.html  _version_8h.html  _version_8h_source.html  class_config_file.html  class_console.html  class_crypto.html  class_crypto_key.html  class_log.html  class_log_file.html  class_packer-members.html  class_packer.html  class_variant.html  classes.html  dir_74389ed8173ad57b461b9d623a1f3867.html  dir_850efdcc0dc052aff223ee96b5c86eed.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_type.html  menudata.js
Packer/latex/: _config_file_8h.tex  _config_file_8h_source.tex  _console_8h.tex  _console_8h_source.tex  _crypto_8h.tex  _crypto_8h_source.tex  _defaults_8h.tex  _defaults_8h_source.tex  _error_8h.tex  _error_8h_source.tex  _log_8h.tex  _log_8h_source.tex  _log_file_8h.tex  _log_file_8h_source.tex  _packer_8h.tex  _packer_8h_source.tex  _typedefs_8h.tex  _typedefs_8h_source.tex  _variant_8h.tex  _variant_8h_source.tex  _version_8h.tex  _version_8h_source.tex  class_config_file.tex  class_console.tex  class_crypto.tex  class_crypto_key.tex  class_log.tex  class_log_file.tex  class_packer.tex  class_variant.tex  files.tex  refman.tex
Scripts/: GenerateDocs.py
Source/Console/: Application.cpp  Application.h  Defaults.h  Main.cpp  Resources.aps  Resources.rc  Typedefs.h
Source/Packer/: Color.h  ConfigFile.cpp  ConfigFile.h  Console.cpp  Console.h  Crypto.cpp  Crypto.h  CryptoKey.cpp  CryptoKey.h  Defaults.h  Error.cpp  Error.h  Extension.cpp  Extension.h  FileAccess.cpp  FileAccess.h  Log.cpp  Log.h  LogFile.cpp  LogFile.h  Packer.cpp  Packer.h  Platform.cpp  Platform.h  Typedefs.cpp  Typedefs.h  Variant.cpp  Variant.h  Version.h
Source/Tests/: Main.cpp  TestConfigFIle.cpp  TestConfigFIle.h  TestCrypto.cpp  TestCrypto.h  TestCryptoKey.cpp  TestCryptoKey.h  TestPacker.cpp  TestPacker.h  TestSuite.cpp  TestSuite.h  TestVariant.cpp  TestVariant.h  Typedefs.h
documentation/: generate_docs.py
documentation/html/: annotated.html  application_8h.html  application_8h_source.html  bc_s.png.import  bc_sd.png.import  class_application.png.import  class_config_file.html  class_console-members.html  class_console.png.import  class_crypto-members.html  class_log.html  class_log_file-members.html  class_log_file.html  classes.html  (+62 more)
resources/: logo.png.import
source/console/: CMakeLists.txt  application.cpp  application.h  console_app.cpp  console_app.h  defaults.h  main.cpp  resources.rc
source/packer/: CMakeLists.txt  config_file.cpp  config_file.h  console.cpp  console.h  crypto.cpp  crypto.h  defaults.h  error.cpp  error.h  log.cpp  log.h  log_file.cpp  log_file.h  packer.cpp  packer.h  string.cpp  string.h  typedefs.h  variant.cpp  variant.h  version.h
source/tests/: CMakeLists.txt  main.cpp  test_config_file.cpp  test_config_file.h  test_crypto.cpp  test_crypto.h  test_packer.cpp  test_packer.h  test_suite.cpp  test_suite.h  test_variant.cpp  test_variant.h
(+389 files in other folders)
